# opengl-code

./: CMakeLists.txt
001-3DS/: 3DSLoader.cpp  CMakeLists.txt
002-IMGUI/: CMakeLists.txt  imgui_impl_glfw_glad.cpp  light_fs.glsl  light_vs.glsl  main.cpp  shader_fs.glsl  shader_vs.glsl
003-PAR_SHAPES/: CMakeLists.txt  shapes.cpp
resources/model/: duck.3ds
